[package]
name = "rust_protobuf_home_auto"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"

build = "src/build.rs"

[lib]
name = "home_auto"
path = "src/lib.rs"

[dependencies]
bytes = "0.5"
prost = "0.6"
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

[build-dependencies]
prost-build = "0.6"
